Update contactme : fix div display on smaller screens

--- a/src/app/contactme/contactme.component.css
+++ b/src/app/contactme/contactme.component.css
@@ -4,3 +4,7 @@
   align-items: baseline;
   gap: 20px;
 }
+
+.fa-envelope {
+  margin: 5px;
+}
